--- a/lib/emoji_web/components/layouts/app.html.heex
+++ b/lib/emoji_web/components/layouts/app.html.heex
@@ -4,6 +4,9 @@
       <a class="font-bold" href="/">
         AImoji
       </a>
+      <a href="https://replicate.com" class="font-medium">
+        An Open Source Emoji Generator from Replicate
+      </a>
     </div>
   </div>
 </header>
