add a "powered by replicate" thingy

--- a/lib/emoji_web/components/layouts/app.html.heex
+++ b/lib/emoji_web/components/layouts/app.html.heex
@@ -4,8 +4,14 @@
       <a class="font-bold" href="/">
         AImoji
       </a>
-      <a href="https://replicate.com" class="font-medium">
-        An Open Source Emoji Generator from Replicate
+      <a href="https://github.com/cbh123/emoji" class="font-medium">
+        An Open Source Emoji Generator
+      </a>
+    </div>
+
+    <div>
+      <a href="https://replicate.com/docs" class="font-bold hover:underline">
+        Powered by Replicate
       </a>
     </div>
   </div>
