--- a/lib/emoji_web/live/home_live.html.heex
+++ b/lib/emoji_web/live/home_live.html.heex
@@ -39,7 +39,7 @@
     <p class="pointer-events-none mt-2 block truncate text-sm font-medium text-gray-900">
       :<%= human_name(prediction.prompt) %>:
     </p>
-    <button phx-click="thumbs-up" class="rounded-full bg-gray-50 border p-1 mt-2">
+    <button phx-click="thumbs-up" class="hidden rounded-full bg-gray-50 border p-1 mt-2">
       <img
         class="h-6"
         src="https://github.com/replicate/zoo/assets/14149230/866884cd-071e-435f-8e35-8e8754c97da0"
