--- a/lib/emoji_web/components/layouts/app.html.heex
+++ b/lib/emoji_web/components/layouts/app.html.heex
@@ -9,13 +9,18 @@
       </a>
     </div>
 
-    <div>
-      <a href="https://replicate.com/docs" class="font-bold hover:underline">
-        Powered by Replicate
-      </a>
-    </div>
+    <div></div>
   </div>
 </header>
+
+<div class="mt-12 w-full text-center">
+  <h1 class="font-bold">
+    <a href="https://replicate.com" class="font-bold hover:underline">
+    Powered by Replicate.
+      Build your own AI app → </a>.
+  </h1>
+</div>
+
 <main class="px-4 py-20 sm:px-6 lg:px-8">
   <div class="mx-auto max-w-2xl">
     <.flash_group flash={@flash} />
