--- a/lib/emoji_web/components/layouts/app.html.heex
+++ b/lib/emoji_web/components/layouts/app.html.heex
@@ -16,8 +16,7 @@
 <div class="mt-12 w-full text-center">
   <h1 class="font-bold">
     <a href="https://replicate.com" class="font-bold hover:underline">
-    Powered by Replicate.
-      Build your own AI app → </a>.
+    Powered by Replicate. Build your own AI app → </a>.
   </h1>
 </div>
 
