--- a/lib/emoji_web/live/home_live.html.heex
+++ b/lib/emoji_web/live/home_live.html.heex
@@ -8,6 +8,7 @@
   </:actions>
 </.simple_form>
 
+<.header class="mt-12">Examples</.header>
 <ul
   id="predictions"
   phx-update="stream"
@@ -67,3 +68,67 @@
     </div>
   </li>
 </ul>
+
+<div class="mt-12">
+  <.header>Recents (view at your own risk...)</.header>
+
+  <ul
+    id="recent-predictions"
+    phx-update="stream"
+    role="list"
+    class="grid grid-cols-2 mt-6 gap-x-4 gap-y-8 sm:grid-cols-3 sm:gap-x-6 lg:grid-cols-4 xl:gap-x-8"
+  >
+    <li :for={{id, prediction} <- @streams.recent_predictions} id={id} class="relative">
+      <div class="group aspect-h-7 aspect-w-10 block w-full overflow-hidden rounded-lg bg-gray-100 focus-within:ring-2 focus-within:ring-black-500 focus-within:ring-offset-2 focus-within:ring-offset-gray-100">
+        <%= if is_nil(prediction.output) do %>
+          <div class="flex items-center justify-center h-36">
+            <p class="animate-pulse ">Loading...</p>
+          </div>
+        <% else %>
+          <button
+            id={"prediction-#{id}-btn"}
+            phx-hook="DownloadImage"
+            phx-value-name={prediction.prompt |> human_name()}
+            phx-value-image={prediction.output}
+            type="button"
+          >
+            <img
+              src={prediction.output}
+              alt={prediction.prompt}
+              class="pointer-events-none object-cover group-hover:opacity-75"
+            />
+          </button>
+        <% end %>
+      </div>
+      <p class="pointer-events-none mt-2 block truncate text-sm font-medium text-gray-900">
+        :<%= human_name(prediction.prompt) %>:
+      </p>
+      <div class={"flex justify-between items-center feedback-#{prediction.id}"}>
+        <button
+          id={"thumbs-up-#{prediction.id}"}
+          phx-click={JS.hide(to: ".feedback-#{prediction.id}") |> JS.push("thumbs-up")}
+          phx-value-id={prediction.id}
+          class="rounded-full bg-gray-50 border p-1 mt-2"
+        >
+          <img
+            class="h-6"
+            src="https://github.com/replicate/zoo/assets/14149230/866884cd-071e-435f-8e35-8e8754c97da0"
+            alt=""
+          />
+        </button>
+        <button
+          id={"thumbs-down-#{prediction.id}"}
+          phx-value-id={prediction.id}
+          phx-click={JS.hide(to: ".feedback-#{prediction.id}") |> JS.push("thumbs-down")}
+          class="rounded-full bg-gray-50 border p-1 mt-2 rotate-180"
+        >
+          <img
+            class="h-6"
+            src="https://github.com/replicate/zoo/assets/14149230/866884cd-071e-435f-8e35-8e8754c97da0"
+            alt=""
+          />
+        </button>
+      </div>
+    </li>
+  </ul>
+</div>
