--- a/lib/emoji_web/components/layouts/app.html.heex
+++ b/lib/emoji_web/components/layouts/app.html.heex
@@ -14,10 +14,13 @@
 </header>
 
 <div class="mt-12 w-full text-center">
-  <h1 class="font-bold">
+  <div class="font-bold">
     <a href="https://replicate.com/?utm_source=project&utm_campaign=almoji" class="font-bold hover:underline">
-    Powered by Replicate. Build your own AI app → </a>.
-  </h1>
+    Powered by Replicate. Build your own AI app → </a>
+  </div>
+  <div>
+    <a href="https://github.com/cbh123/emoji">Fork this app on GitHub</a>
+  </div>
 </div>
 
 <main class="px-4 py-20 sm:px-6 lg:px-8">
