Add an emoji favicon

--- a/lib/emoji_web/components/layouts/root.html.heex
+++ b/lib/emoji_web/components/layouts/root.html.heex
@@ -8,6 +8,7 @@
       <%= assigns[:page_title] || "AI Emojis" %>
     </.live_title>
     <link phx-track-static rel="stylesheet" href={~p"/assets/app.css"} />
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>😻</text></svg>" />
     <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}>
     </script>
   </head>
