Add another link to replicate

--- a/lib/emoji_web/components/layouts/app.html.heex
+++ b/lib/emoji_web/components/layouts/app.html.heex
@@ -14,11 +14,12 @@
 </header>
 
 <div class="mt-12 w-full text-center">
-  <div class="font-bold">
+  <div class="font-bold mb-3">
     <a href="https://replicate.com/?utm_source=project&utm_campaign=almoji" class="font-bold hover:underline">
     Powered by Replicate. Build your own AI app → </a>
   </div>
   <div>
+    <a href="https://replicate.com/fofr/sdxl-emoji?utm_source=project&utm_campaign=almoji">Run fofr/sdxl-emoji with an API on Replicate</a> · 
     <a href="https://github.com/cbh123/emoji">Fork this app on GitHub</a>
   </div>
 </div>
