--- a/lib/emoji_web/components/layouts/app.html.heex
+++ b/lib/emoji_web/components/layouts/app.html.heex
@@ -15,16 +15,19 @@
 
 <div class="mt-12 w-full text-center">
   <div class="font-bold mb-3">
-    <a href="https://replicate.com/?utm_source=project&utm_campaign=almoji" class="font-bold hover:underline">
-    Powered by Replicate. Build your own AI app → </a>
+    <a
+      href="https://replicate.com/?utm_source=project&utm_campaign=almoji"
+      class="font-bold hover:underline"
+    >
+      Powered by fofr/sdxl-emoji on Replicate. Build your own AI app →
+    </a>
   </div>
   <div>
-    <a href="https://replicate.com/fofr/sdxl-emoji?utm_source=project&utm_campaign=almoji">Run fofr/sdxl-emoji with an API on Replicate</a> · 
     <a href="https://github.com/cbh123/emoji">Fork this app on GitHub</a>
   </div>
 </div>
 
-<main class="px-4 py-20 sm:px-6 lg:px-8">
+<main class="px-4 py-6 sm:px-6 lg:px-8">
   <div class="mx-auto max-w-2xl">
     <.flash_group flash={@flash} />
     <%= @inner_content %>
