--- a/lib/emoji_web/components/layouts/app.html.heex
+++ b/lib/emoji_web/components/layouts/app.html.heex
@@ -2,7 +2,7 @@
   <div class="flex items-center justify-between border-b border-zinc-100 py-3">
     <div class="flex items-center gap-4">
       <a class="font-bold" href="/">
-        AImoji
+        EmojiGen
       </a>
       <a href="https://github.com/cbh123/emoji" class="font-medium">
         An Open Source Emoji Generator
