--- a/lib/emoji_web/components/layouts/app.html.heex
+++ b/lib/emoji_web/components/layouts/app.html.heex
@@ -16,7 +16,7 @@
 <div class="mt-12 w-full text-center">
   <div class="font-bold mb-3">
     <a
-      href="https://replicate.com/?utm_source=project&utm_campaign=almoji"
+      href="https://replicate.com/fofr/sdxl-emoji?utm_source=project&utm_campaign=almoji"
       class="font-bold hover:underline"
     >
       Powered by fofr/sdxl-emoji on Replicate. Build your own AI app →
