hide the firehose

--- a/lib/emoji_web/live/home_live.html.heex
+++ b/lib/emoji_web/live/home_live.html.heex
@@ -129,7 +129,7 @@
   </li>
 </ul>
 
-<div class="mt-12">
+<div class="mt-12 hidden">
   <.header>Recents (view at your own risk...)</.header>
 
   <ul
