--- a/lib/emoji_web/live/home_live.html.heex
+++ b/lib/emoji_web/live/home_live.html.heex
@@ -81,7 +81,7 @@
 >
   <li :for={{id, prediction} <- @streams.predictions} id={id} class="relative">
     <div class="group aspect-h-7 aspect-w-10 block w-full overflow-hidden rounded-lg bg-gray-100 focus-within:ring-2 focus-within:ring-black-500 focus-within:ring-offset-2 focus-within:ring-offset-gray-100">
-      <%= if is_nil(prediction.emoji_output) do %>
+      <%= if is_nil(prediction.emoji_output) and is_nil(prediction.no_bg_output) do %>
         <div class="flex items-center justify-center h-36">
           <p class="animate-pulse ">Loading...</p>
         </div>
