--- a/lib/emoji_web/live/history_live.html.heex
+++ b/lib/emoji_web/live/history_live.html.heex
@@ -1,5 +1,9 @@
 <div id="history" phx-hook="AssignUserId" class="">
+  <.back navigate={~p"/"}>Home</.back>
+  <p :if={is_nil(@local_user_id)}>Loading...</p>
+  <.header>My Emojis</.header>
   <ul
+    :if={@local_user_id}
     id="predictions"
     phx-update="stream"
     role="list"
@@ -30,32 +34,7 @@
       <p class="pointer-events-none mt-2 block truncate text-sm font-medium text-gray-900">
         :<%= human_name(prediction.prompt) %>:
       </p>
-      <div class={"flex justify-between items-center feedback-#{prediction.id}"}>
-        <button
-          id={"thumbs-up-#{prediction.id}"}
-          phx-click={JS.hide(to: ".feedback-#{prediction.id}") |> JS.push("thumbs-up")}
-          phx-value-id={prediction.id}
-          class="rounded-full bg-gray-50 border p-1 mt-2"
-        >
-          <img
-            class="h-6"
-            src="https://github.com/replicate/zoo/assets/14149230/866884cd-071e-435f-8e35-8e8754c97da0"
-            alt=""
-          />
-        </button>
-        <button
-          id={"thumbs-down-#{prediction.id}"}
-          phx-value-id={prediction.id}
-          phx-click={JS.hide(to: ".feedback-#{prediction.id}") |> JS.push("thumbs-down")}
-          class="rounded-full bg-gray-50 border p-1 mt-2 rotate-180"
-        >
-          <img
-            class="h-6"
-            src="https://github.com/replicate/zoo/assets/14149230/866884cd-071e-435f-8e35-8e8754c97da0"
-            alt=""
-          />
-        </button>
-      </div>
+      <div class={"flex justify-between items-center feedback-#{prediction.id}"}></div>
     </li>
   </ul>
 </div>
