add safety rating

--- a/lib/emoji_web/live/home_live.html.heex
+++ b/lib/emoji_web/live/home_live.html.heex
@@ -14,7 +14,7 @@
   </div>
 
   <.form for={@form} id="prediction-form" phx-change="validate" phx-submit="save">
-    <div class="flex items-center w-full bg-gray-50">
+    <div class="flex items-center w-full">
       <.input
         field={@form[:prompt]}
         type="text"
