--- a/lib/emoji_web/live/show_live.html.heex
+++ b/lib/emoji_web/live/show_live.html.heex
@@ -46,3 +46,7 @@
     />
   </button>
 </div>
+
+<h2 :if={@prediction.moderation_score} class="mt-4">
+  AI Generated safety rating: <%= @prediction.moderation_score %>
+</h2>
