show query in box

--- a/lib/emoji_web/live/search_live.html.heex
+++ b/lib/emoji_web/live/search_live.html.heex
@@ -5,6 +5,7 @@
       <input
         type="text"
         name="query"
+        value={@query}
         id="query"
         class="block w-full rounded-md border-gray-300 pr-12 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm"
       />
