--- a/lib/emoji_web/live/search_live.html.heex
+++ b/lib/emoji_web/live/search_live.html.heex
@@ -7,6 +7,7 @@
         name="query"
         value={@query}
         id="query"
+        required="true"
         class="block w-full rounded-md border-gray-300 pr-12 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm"
       />
     </div>
