--- a/lib/emoji_web/live/home_live.html.heex
+++ b/lib/emoji_web/live/home_live.html.heex
@@ -26,7 +26,7 @@
         name="submit"
         value="search"
         phx-disable-with="Searching..."
-        class="self-end ml-2"
+        class="self-end ml-2 hidden"
       >
         Search
       </.outline_button>
