async loading for search

--- a/lib/emoji_web/live/search_live.html.heex
+++ b/lib/emoji_web/live/search_live.html.heex
@@ -13,7 +13,9 @@
     </div>
   </form>
 
-  <ul role="list" class="mt-4 gap-6 grid grid-cols-3 divide-y divide-gray-200">
+  <div :if={@loading} class="mt-2 animate-pulse">Searching...</div>
+
+  <ul :if={not @loading} role="list" class="mt-4 gap-6 grid grid-cols-3 divide-y divide-gray-200">
     <li :for={{prediction, distance} <- @results}>
       <p class="text-sm font-medium text-gray-900">
         <button
@@ -34,7 +36,7 @@
         navigate={~p"/emoji/#{prediction.id}"}
         class="mt-2 block truncate text-sm font-medium text-gray-900"
       >
-        :<%= human_name(prediction.prompt) %>:
+        :<%= humanize(prediction.prompt) %>:
       </.link>
       <span class="inline-flex items-center rounded-md bg-gray-50 px-2 py-1 text-xs font-medium text-gray-600 ring-1 ring-inset ring-gray-500/10">
         Distance: <%= distance |> floor() %>
