--- a/lib/emoji_web/live/search_live.html.heex
+++ b/lib/emoji_web/live/search_live.html.heex
@@ -1,6 +1,7 @@
 <div>
-  <form name="emoji-search" id="emoji-search" phx-submit="search">
-    <label for="search" class="block text-sm font-medium text-gray-700">Embedding search</label>
+  <.back navigate={~p"/"}>Back</.back>
+  <form class="mt-4" name="emoji-search" id="emoji-search" phx-submit="search">
+    <label for="search" class="block text-sm font-medium text-gray-700">Emoji Search</label>
     <div class="relative mt-1 flex items-center">
       <input
         type="text"
